--- a/src/input.css
+++ b/src/input.css
@@ -1,1 +1,16 @@
 @import "tailwindcss";
+
+@theme {
+  --font-poppins: "Poppins", serif;
+  --font-lato: "Lato", serif;
+}
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
