--- a/src/output.css
+++ b/src/output.css
@@ -202,6 +202,9 @@
   .ml-10 {
     margin-left: calc(var(--spacing) * 10);
   }
+  .block {
+    display: block;
+  }
   .flex {
     display: flex;
   }
